added menu list and hover effect

--- a/home.html
+++ b/home.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-    <h1>
-        Fisher Lyon
-    </h1>
+    <div class="header-text">
+        <h6>
+            Hi, my name is
+        </h6>
+        <h1>
+            Fisher Lyon
+        </h1>
+    </div>
+    
+    <ul class="menu-list">
+        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="coursehist.html">Course History</a></li>
+    </ul>
+    
 </body>
 </html>
