--- a/home.html
+++ b/home.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-    <div class="header-text">
-        <h6>
-            Hi, my name is
-        </h6>
-        <h1>
-            Fisher Lyon
-        </h1>
-    </div>
+    <h6>
+        Hi, my name is
+    </h6>
     
-    <ul class="menu-list">
+    <h1>
+        Fisher Lyon
+    </h1>
+
+    <ul>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="coursehist.html">Course History</a></li>
+        <li><a href="projects.html">My Projects</a></li>
+        <li><a href="workhist.html">Work History</a></li>
+        <li><a href="highschool.html">HS Education</a></li>
     </ul>
     
 </body>
