added rest of files

--- a/coursehist.html
+++ b/coursehist.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" type="text/css" href="coursehist.css">
 </head>
 <body>
-    
     <h4><a href="home.html">Return Home</a></h4>
-
-    <h1>
-        Cal Poly San Luis Obispo<br>Course History
-    </h1>
+    <h1>Cal Poly San Luis Obispo<br>Course History</h1>
 
     <!--first year-->
     <div class="first-year">
