--- a/home.html
+++ b/home.html
@@ -7,14 +7,8 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-    <h6>
-        Hi, my name is
-    </h6>
-    
-    <h1>
-        Fisher Lyon
-    </h1>
-
+    <h6>Hi, my name is</h6>
+    <h1>Fisher Lyon</h1>
     <ul>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="coursehist.html">Course History</a></li>
@@ -22,6 +16,5 @@
         <li><a href="workhist.html">Work History</a></li>
         <li><a href="highschool.html">HS Education</a></li>
     </ul>
-    
 </body>
 </html>
