--- a/coursehist.html
+++ b/coursehist.html
@@ -7,41 +7,37 @@
     <link rel="stylesheet" type="text/css" href="coursehist.css">
 </head>
 <body>
-    <h4><a href="home.html">Return Home</a></h4>
+    <p><a href="home.html">Return Home</a></p>
     <h1>Cal Poly San Luis Obispo<br>Course History</h1>
 
-    <!--first year-->
-    <div class="first-year">
-        <div class="fall-2021">
-            <h2>2021-2022</h2>
-            <h3>Fall 2021</h3>
+    <!--third year-->
+    <div class="third-year">
+        <div class="fall-2023">
+            <h2>2023-2024</h2>
+            <h3>Fall 2023</h3>
             <ul class="courses">
-                <li>CPE-123: Introduction to Computing: Game Design</li>
-                <li>MATH-141: Calculus I</li>
-                <li>FSN-250: Food & Nutrition: Customs & Culture</li>
-                <li>HIST-201: United States History to 1865</li>
-                <li>UNIV-100: University Studies</li>
+                <li>CSC-357: Systems Programming</li>
+                <li>CPE-315: Computer Architecture</li>
+                <li>MATH-248: Methods of Proof in Math</li>
+                <li>PHIL-314: Early Modern Empiricism</li>
             </ul>
         </div>
-        <div class="winter-2022">
-            <h3>Winter 2022</h2>
+        <div class="winter-2024">
+            <h3>Winter 2024</h2>
             <ul class="courses">
-                <li>CPE-101: Fundamentals of Computer Science</li>
-                <li>MATH 142: Calculus II</li>
-                <li>COMS-101: Public Speaking</li>
-                <li>ENGL-147: Writing Arguments about STEM</li>
+                <li>CSC-323: Cryptography Engineering</li>
+                <li>CSC-308: Software Engineering I</li>
+                <li>BIO 111: General Biology</li>
+                <li>PHIL 309: Early Greek Philosophy</li>
             </ul>
         </div>
-        <div class="spring-2022">
-            <h3>Spring 2022</h3>
+        <div class="spring-2024">
+            <h3>Spring 2024</h3>
             <ul class="courses">
-                <li>CPE-202: Data Structures</li>
-                <li>MATH-143: Calculus III</li>
-                <li>PHIL-230: Philosophical Classics: Knowledge & Reality</li>
-                <li>ES-256: Into to Asian American Studies</li>
+                <li>in progress</li>
             </ul>
         </div>
-    </div>  
+    </div> 
 
     <!--second year-->
     <div class="second-year">
@@ -76,34 +72,38 @@
         </div>
     </div>
 
-    <!--third year-->
-    <div class="third-year">
-        <div class="fall-2023">
-            <h2>2023-2024</h2>
-            <h3>Fall 2023</h3>
+    <!--first year-->
+    <div class="first-year">
+        <div class="fall-2021">
+            <h2>2021-2022</h2>
+            <h3>Fall 2021</h3>
             <ul class="courses">
-                <li>CSC-357: Systems Programming</li>
-                <li>CPE-315: Computer Architecture</li>
-                <li>MATH-248: Methods of Proof in Math</li>
-                <li>PHIL-314: Early Modern Empiricism</li>
+                <li>CPE-123: Introduction to Computing: Game Design</li>
+                <li>MATH-141: Calculus I</li>
+                <li>FSN-250: Food & Nutrition: Customs & Culture</li>
+                <li>HIST-201: United States History to 1865</li>
+                <li>UNIV-100: University Studies</li>
             </ul>
         </div>
-        <div class="winter-2024">
-            <h3>Winter 2024</h2>
+        <div class="winter-2022">
+            <h3>Winter 2022</h2>
             <ul class="courses">
-                <li>CSC-323: Cryptography Engineering</li>
-                <li>CSC-308: Software Engineering I</li>
-                <li>BIO 111: General Biology</li>
-                <li>PHIL 309: Early Greek Philosophy</li>
+                <li>CPE-101: Fundamentals of Computer Science</li>
+                <li>MATH 142: Calculus II</li>
+                <li>COMS-101: Public Speaking</li>
+                <li>ENGL-147: Writing Arguments about STEM</li>
             </ul>
         </div>
-        <div class="spring-2024">
-            <h3>Spring 2024</h3>
+        <div class="spring-2022">
+            <h3>Spring 2022</h3>
             <ul class="courses">
-                <li>in progress</li>
+                <li>CPE-202: Data Structures</li>
+                <li>MATH-143: Calculus III</li>
+                <li>PHIL-230: Philosophical Classics: Knowledge & Reality</li>
+                <li>ES-256: Into to Asian American Studies</li>
             </ul>
         </div>
-    </div>
-    
+    </div> 
+
 </body>
 </html>
