--- a/highschool.html
+++ b/highschool.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="highschool.css">
 </head>
 <body>
+    <p><a href="home.html">Return Home</a></p>
+    <h1>Highschool Education</h1>
     
 </body>
 </html>
