--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="projects.css">
 </head>
 <body>
+    <p><a href="home.html">Return Home</a></p>
+    <h1>My Projects</h1>
     
 </body>
 </html>
