--- a/workhist.html
+++ b/workhist.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="workhist.css">
 </head>
 <body>
+    <p><a href="home.html">Return Home</a></p>
+    <h1>Work History</h1>
     
 </body>
 </html>
