working on workhist

--- a/workhist.html
+++ b/workhist.html
@@ -9,6 +9,39 @@
 <body>
     <p><a href="home.html">Return Home</a></p>
     <h1>Work History</h1>
+
+    <div class="trio-mentor">
+        <h2>TRIO LINKS Peer Mentor</h2>
+        <h3>TRIO Achievers Cal Poly • Academic Period 2023-present</h3>
+        <ul class="description">
+            <li>Provided guidance and support to TRIO first-time freshman and first-year transfer students.</li>
+            <li>Offered valuable advice, assistance, and resources to aid in the transition to Cal Poly and San Luis Obispo.</li>
+            <li>Facilitated frequent one-on-one meetings with assigned students to discuss transition progress.</li>
+            <li>Organized and participated in quarterly activities for TRIO students to foster community and connection.</li>
+            <li>Leveraged personal experience and knowledge to assist mentees in navigating the challenges of university life.</li>
+            <li>Provided resources and information to better equip students for academic and personal success.</li>
+            <li>Demonstrated an understanding of the unique needs and challenges faced by first-time freshman and first-year transfer students.</li>
+            <li>Fostered a supportive and inclusive environment for mentees with diverse backgrounds and experiences.</li>
+            <li>Effectively communicated with students to address concerns and provide relevant information.</li>
+            <li>Facilitated open and constructive dialogue to ensure mentees felt comfortable seeking guidance.</li>
+            <li>Encouraged the development of lifelong friendships among TRIO students.</li>
+        </ul>
+    </div>
+
+    <div class="swim-instruct">
+        <h2>Swim Instructor</h2>
+        <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023</h3>
+    </div>
+
+    <div class="swim-coach">
+        <h2>Swim Coach</h2>
+        <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023</h3>
+    </div>
+
+    <div class="lifeguard">
+        <h2>Lifeguard</h2>
+        <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023</h3>
+    </div>
     
 </body>
 </html>
