swim coach resume points added

--- a/coursehist.html
+++ b/coursehist.html
@@ -27,14 +27,17 @@
             <ul class="courses">
                 <li>CSC-323: Cryptography Engineering</li>
                 <li>CSC-308: Software Engineering I</li>
-                <li>BIO 111: General Biology</li>
-                <li>PHIL 309: Early Greek Philosophy</li>
+                <li>BIO-111: General Biology</li>
+                <li>PHIL-309: Early Greek Philosophy</li>
             </ul>
         </div>
         <div class="spring-2024">
             <h3>Spring 2024</h3>
             <ul class="courses">
-                <li>in progress</li>
+                <li>CSC-430: Programming Languages</li>
+                <li>CSC-321: Intro to Computer Security</li>
+                <li>CSC-309: Software Engineering II</li>
+                <li>PHIL-241: Symbolic Logic</li>
             </ul>
         </div>
     </div> 
