--- a/workhist.html
+++ b/workhist.html
@@ -30,12 +30,30 @@
 
     <div class="swim-instruct">
         <h2>Swim Instructor</h2>
-        <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023</h3>
+        <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023
+            <br>Self-Employed • Academic Period 2022-2023
+        </h3>
+        <ul class="description">
+            <li>Designed and implemented custom swim lesson plans tailored to individuals, ensuring each student's progression and safety.</li>
+            <li>Instructed swimmers of all ages and skill levels in various swimming techniques, including freestyle, backstroke, breaststroke, and butterfly.</li>
+            <li>Provided constructive feedback and encouragement to students, fostering a positive learning environment conducive to skill development and confidence building.</li>
+            <li>Demonstrated proper stroke mechanics and water safety practices through hands-on instruction and visual demonstrations.</li>
+            <li>Communicated effectively with parents or guardians regarding students' progress, achievements, and areas for improvement.</li>
+            <li>Maintained up-to-date knowledge of CPR, first aid, and lifeguarding techniques to ensure readiness for emergency situations.</li>
+        </ul>
     </div>
 
     <div class="swim-coach">
         <h2>Swim Coach</h2>
         <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023</h3>
+        <ul class="description">
+            <li>Designed and implemented tailored training programs to improve swimmers' technique, endurance, and performance.</li>
+            <li>Provided personalized feedback and instruction to athletes of varying skill levels to enhance their swimming abilities.</li>
+            <li>Demonstrated effective communication skills in conveying training objectives, strategies, and feedback to swimmers and their parents or guardians.</li>
+            <li>Cultivated positive relationships with swimmers, parents, and stakeholders, fostering a supportive and inclusive team culture.</li>
+            <li>Demonstrated leadership and mentorship qualities, inspiring athletes to set and achieve personal and team goals both in and out of the pool.</li>
+            <li>Adapted coaching strategies and approaches to accommodate diverse learning styles and individual athlete needs.</li>
+        </ul>
     </div>
 
     <div class="lifeguard">
