finished work history

--- a/workhist.html
+++ b/workhist.html
@@ -31,7 +31,7 @@
     <div class="swim-instruct">
         <h2>Swim Instructor</h2>
         <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023
-            <br>Self-Employed • Academic Period 2022-2023
+            <br>Self-Employed • Academic Period 2021-2023
         </h3>
         <ul class="description">
             <li>Designed and implemented custom swim lesson plans tailored to individuals, ensuring each student's progression and safety.</li>
@@ -59,6 +59,15 @@
     <div class="lifeguard">
         <h2>Lifeguard</h2>
         <h3>Simonsen Delta Swim Center c/o Rio Vista Sharks • Summer 2021-2023</h3>
+        <ul class="description">
+            <li>Conducted regular surveillance of pool area to ensure the safety of all patrons.</li>
+            <li>Enforced pool rules and regulations to maintain a safe and orderly environment.</li>
+            <li>Demonstrated strong communication skills by providing clear instructions and guidance to patrons.</li>
+            <li>Completed routine maintenance tasks, such as cleaning and testing pool water quality, to uphold safety standards.</li>
+            <li>Participated in ongoing training sessions to enhance lifeguarding skills and knowledge of emergency protocols.</li>
+            <li>Provided exceptional customer service by addressing patron concerns and inquiries promptly and courteously.</li>
+            <li>Acted as a role model for pool safety and demonstrated leadership qualities among peers.</li>
+        </ul>
     </div>
     
 </body>
