work on about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,17 @@
 <body>
     <p><a href="home.html">Return Home</a></p>
     <h1>About Me</h1>
-    
+    <div class="row">
+        <div class="aboutme-col-1">
+            <img src="images/aboutme.PNG">
+        </div>
+        <div class="aboutme-col-2">
+            <h1>Hi, my name is Fisher Lyon.</h1>
+            <p>I am a third-year Computer Science major and Philosophy minor at<br>California Polytechnic State University, San Luis Obispo.</p>
+            <p>I am currently seeking an internship opportunity!</p>
+            <p><b>Skills:</b> Python, Java, C, HTML, CSS, Unix Command Line, RISC-V Assembly, and MIPS Assembly</p>
+            <p>Click here to see my <a href="coursehist.html">Course History</a>.</p>
+        </div>
+    </div>
 </body>
 </html>
