education change, and changes to about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="aboutme.css">
 </head>
 <body>
-    <p><a href="home.html">Return Home</a></p>
+    <p><a class="home" href="home.html">Return Home</a></p>
     <h1>About Me</h1>
     <div class="row">
         <div class="aboutme-col-1">
@@ -15,10 +15,11 @@
         </div>
         <div class="aboutme-col-2">
             <h1>Hi, my name is Fisher Lyon.</h1>
-            <p>I am a third-year Computer Science major and Philosophy minor at<br>California Polytechnic State University, San Luis Obispo.</p>
+            <p>I am a third-year Computer Science major and Philosophy minor at California Polytechnic State University, San Luis Obispo.</p>
+            <p>insert description here</p>
             <p>I am currently seeking an internship opportunity!</p>
-            <p><b>Skills:</b> Python, Java, C, HTML, CSS, Unix Command Line, RISC-V Assembly, and MIPS Assembly</p>
-            <p>Click here to see my <a href="coursehist.html">Course History</a>.</p>
+            <p>To view my educational background, click <a href="education.html">here</a>.</p>
+            <p>To view my Cal Poly course history, click <a href="coursehist.html">here</a>.</p>
         </div>
     </div>
 </body>
