--- a/coursehist.html
+++ b/coursehist.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="coursehist.css">
 </head>
 <body>
-    <p><a href="home.html">Return Home</a></p>
+    <p><a class="home" href="home.html">Return Home</a></p>
     <h1>Cal Poly San Luis Obispo<br>Course History</h1>
 
     <!--third year-->
