--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
     <h1>Fisher Lyon</h1>
     <ul>
         <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="education.html">Education</a></li>
         <li><a href="coursehist.html">Course History</a></li>
-        <li><a href="projects.html">My Projects</a></li>
         <li><a href="workhist.html">Work History</a></li>
-        <li><a href="highschool.html">HS Education</a></li>
+        <li><a href="projects.html">My Projects</a></li>
     </ul>
 </body>
 </html>
