--- a/education.html
+++ b/education.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | fwlyon.com</title>
-    <link rel="stylesheet" type="text/css" href="projects.css">
+    <title>Education | fwlyon.com</title>
+    <link rel="stylesheet" type="text/css" href="education.css">
 </head>
 <body>
     <p><a class="home" href="home.html">Return Home</a></p>
-    <h1>My Projects</h1>
+    <h1>Education</h1>
     
 </body>
 </html>
