added honors section

--- a/coursehist.html
+++ b/coursehist.html
@@ -12,7 +12,7 @@
 
     <!--third year-->
     <div class="third-year">
-        <div class="fall-2023">
+        <div class="top">
             <h2>2023-2024</h2>
             <h3>Fall 2023</h3>
             <ul class="courses">
@@ -22,7 +22,7 @@
                 <li>PHIL 314: Early Modern Empiricism</li>
             </ul>
         </div>
-        <div class="winter-2024">
+        <div class="rest">
             <h3>Winter 2024</h2>
             <ul class="courses">
                 <li>CSC 323: Cryptography Engineering</li>
@@ -31,7 +31,7 @@
                 <li>PHIL 309: Early Greek Philosophy</li>
             </ul>
         </div>
-        <div class="spring-2024">
+        <div class="rest">
             <h3>Spring 2024</h3>
             <ul class="courses">
                 <li>CSC 430: Programming Languages</li>
@@ -44,7 +44,7 @@
 
     <!--second year-->
     <div class="second-year">
-        <div class="fall-2022">
+        <div class="top">
             <h2>2022-2023</h2>
             <h3>Fall 2022</h3>
             <ul class="courses">
@@ -54,7 +54,7 @@
                 <li>PHYS 141: General Physics I</li>
             </ul>
         </div>
-        <div class="winter-2023">
+        <div class="rest">
             <h3>Winter 2023</h2>
             <ul class="courses">
                 <li>CSC 248: Discrete Structures</li>
@@ -64,7 +64,7 @@
                 <li>MU 120: Music Appreciation</li>
             </ul>
         </div>
-        <div class="spring-2023">
+        <div class="rest">
             <h3>Spring 2023</h3>
             <ul class="courses">
                 <li>CSC 349: Design & Analysis of Algorithms</li>
@@ -77,7 +77,7 @@
 
     <!--first year-->
     <div class="first-year">
-        <div class="fall-2021">
+        <div class="top">
             <h2>2021-2022</h2>
             <h3>Fall 2021</h3>
             <ul class="courses">
@@ -88,7 +88,7 @@
                 <li>UNIV 100: University Studies</li>
             </ul>
         </div>
-        <div class="winter-2022">
+        <div class="rest">
             <h3>Winter 2022</h2>
             <ul class="courses">
                 <li>CPE 101: Fundamentals of Computer Science</li>
@@ -97,7 +97,7 @@
                 <li>ENGL 147: Writing Arguments about STEM</li>
             </ul>
         </div>
-        <div class="spring-2022">
+        <div class="rest">
             <h3>Spring 2022</h3>
             <ul class="courses">
                 <li>CPE 202: Data Structures</li>
