--- a/education.html
+++ b/education.html
@@ -9,6 +9,39 @@
 <body>
     <p><a class="home" href="home.html">Return Home</a></p>
     <h1>Education</h1>
+
+    <!-- Cal Poly -->
+    <div class="college">
+        <h3>California Polytechnic State Unviersity, San Luis Obispo</h3>
+        <ul>
+            <li>Currently attending!</li>
+            <li>Expected Graduation Term: Spring 2025</li>
+            <li>Major: Computer Science</li>
+            <li>Minor: Philosophy</li>
+            <li>GPA: 3.525</li>
+            <li>Dean's List: Fall 2021, Winter 2023, Fall 2023, & Winter 2024</li>
+            <li>Organizations: TRIO Achievers</li>
+        </ul>
+    </div>
+
+    <!-- Highschool -->
+    <div class="highschool">
+        <h3>Rio Vista High School, Rio Vista</h3>
+        <ul>
+            <li>Graduation Term: Spring 2021</li>
+            <li>Graduated with Highest Honors</li>
+            <li>GPA: 4.3158</li>
+            <li>Class Rank: 2 of 98</li>
+            <li>NAMI Club Treasurer - 2 years
+            <li>Interact Club Vice President - 1 year</li>
+            <li>Academic Decathlon Member - 4 years</li>
+            <li>Robotics Club Member - 2 years</li>
+            <li>Varsity Boys Swim Team Captain - 3 years</li>
+            <li>Varsity Letterman Cross Country, Basketball, Swim, and E-Sports</li>
+            <li>AVID Class Tutor</li>
+            <li>Math and Writing Center Tutor</li>
+        </ul>
+    </div>
     
 </body>
 </html>
