--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
         <li><a href="coursehist.html">Course History</a></li>
         <li><a href="workhist.html">Work History</a></li>
         <li><a href="projects.html">My Projects</a></li>
+        <li><a href="honors.html">Honors</a></li>
     </ul>
 </body>
 </html>
